[project]
name = "ml-ascii"
version = "0.1.0"
description = "Attempt to use ResNet ML to turn images to ascii."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.7.0",
    "tensorflow[and-cuda]>=2.19.0",
]
py-modules = []
